# 2048

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
docs/: index-1171c39280165f6f.js  index-1171c39280165f6f_bg.wasm  index-19ecbac91dc73d0c.js  index-19ecbac91dc73d0c_bg.wasm  index-3abaeb76905cf498.css  index-3e61035448024249.js  index-3e61035448024249_bg.wasm  index-4fd1618a8b146e4e.css  index-5436e859c3ed4cc2.css  index-5eb4dc4c9cc60a23.css  index-7a6f581e4d201c91.css  index-82fec9709b40653d.css  index-962bcc6cd43c7eea.js  index-962bcc6cd43c7eea_bg.wasm  index-b957feb1ca328070.js  index-b957feb1ca328070_bg.wasm  index-bed64251134430e2.js  index-bed64251134430e2_bg.wasm  index-bef79da9308ddcec.js  index-bef79da9308ddcec_bg.wasm  index-d1222800f13f5019.css  index-ddc77b6eba66d415.css  index-fe1d4415f2fbcf91.js  index-fe1d4415f2fbcf91_bg.wasm  index.css  index.html
src/: main.rs
twenty_48/: Cargo.toml
twenty_48/src/: lib.rs  solvers.rs
yew/: Cargo.toml  Trunk.toml  index.html  index.scss  release.toml
yew/src/: main.rs
