[package]
name = "twenty_48"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
rand_distr =  "0.4"
yew = { version = "0.19", optional = true }
