[package]
name = "yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", default-features = false, features = ["csr"] }
twenty_48 = { path = "../twenty_48" }
log = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["TouchList", "Touch", "HtmlDialogElement"] }
serde_json = "1"
wasm-bindgen = "0.2"
serde = { version = "1.0.204", features = ["derive"] }
num-format = "0.4.4"
getrandom = { version = "0.3", features = ["wasm_js"] }

